--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,8 +134,20 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-image-picker')
-    implementation project(':react-native-firebase')
+    implementation project(':react-native-image-picker'){
+        buildscript {
+            repositories {
+                maven { url = "https://dl.bintray.com/android/android-tools/" }
+            }
+        }
+    }
+    implementation project(':react-native-firebase'){
+        buildscript {
+            repositories {
+                maven { url = "https://dl.bintray.com/android/android-tools/" }
+            }
+        }
+    }
     implementation project(':react-native-gesture-handler'){
         buildscript {
             repositories {
@@ -150,7 +162,13 @@ dependencies {
 
     // firebase
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation "com.google.android.gms:play-services-base:16.0.1"
+//    implementation "com.google.firebase:firebase-core:16.0.6"
+    implementation "com.google.firebase:firebase-database:16.0.4"
+    implementation "com.google.firebase:firebase-firestore:17.0.2"
 }
+
+// classpath 'com.android.tools.build:gradle:3.2.0'
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
@@ -161,3 +179,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 
 apply plugin: 'com.google.gms.google-services'
+
+
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
